--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#1A1618">
-    <meta name="description" content="The Honkai: Star Rail branch of Irminsul.GG - a database and companion website for various gacha games.">
-    <meta property="og:title" content="Honkai: Star Rail - Irminsul.GG">
+    <meta name="description" content="فرع هونكاي ستار ريل - هونكاي العرب">
+    <meta property="og:title" content="Honkai: Star Rail - HSR-Arabic">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://assets.irminsul.gg/main/icons/Irminsul.png">
-    <meta property="og:description" content="The Honkai: Star Rail branch of Irminsul.GG - a database and companion website for various gacha games.">
+    <meta property="og:description" content="فرع هونكاي ستار ريل - هونكاي العرب">
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png">
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap">
 
-    <title>Honkai: Star Rail - Irminsul.GG</title>
+    <title>هونكاي العرب</title>
 </head>
 
 <body>
