--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="theme-color" content="#172E62" />
         <meta
             name="description"
-            content="The Honkai: Star Rail branch of Irminsul.GG - a database and companion website for various gacha games."
+            content="The Honkai: Star Rail Library - a database and companion website for various gacha games."
         />
         <meta property="og:title" content="Honkai: Star Rail - Irminsul.GG" />
         <meta property="og:type" content="website" />
@@ -16,7 +16,7 @@
         />
         <meta
             property="og:description"
-            content="The Honkai: Star Rail branch of Irminsul.GG - a database and companion website for various gacha games."
+            content="The Honkai: Star Rail Library - a database and companion website for various gacha games."
         />
 
         <link
@@ -40,7 +40,7 @@
             href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap"
         />
 
-        <title>Honkai: Star Rail - Irminsul.GG</title>
+        <title>هونكاي العرب</title>
     </head>
 
     <body>
