--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
         <meta name="theme-color" content="#172E62" />
         <meta
             name="description"
-            content="The Honkai: Star Rail branch of Irminsul.GG - a database and companion website for various gacha games."
+            content="The Honkai: Star Rail Library"
         />
         <meta property="og:title" content="Honkai: Star Rail - Irminsul.GG" />
         <meta property="og:type" content="website" />
         <meta
             property="og:image"
-            content="https://assets.irminsul.gg/main/icons/HSR.png"
+            content="public\logo.png"
         />
         <meta
             property="og:description"
-            content="The Honkai: Star Rail branch of Irminsul.GG - a database and companion website for various gacha games."
+            content="The Honkai: Star Rail Library"
         />
 
         <link
             rel="icon"
             type="image"
-            href="https://assets.irminsul.gg/main/icons/HSR.png"
+            href="public\logo.png"
         />
         <link
             rel="apple-touch-icon"
-            href="https://assets.irminsul.gg/main/icons/HSR.png"
+            href="public\logo.png"
         />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -40,7 +40,7 @@
             href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap"
         />
 
-        <title>Honkai: Star Rail - Irminsul.GG</title>
+        <title>هونكاي العرب</title>
     </head>
 
     <body>
