--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             name="description"
             content="The Honkai: Star Rail Library"
         />
-        <meta property="og:title" content="Honkai: Star Rail - Irminsul.GG" />
+        <meta property="og:title" content="Honkai: Star Rail Library" />
         <meta property="og:type" content="website" />
         <meta
             property="og:image"
