--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#172E62" />
         <meta
             name="description"
-            content="The Honkai: Star Rail branch of Irminsul.GG - a database and companion website for various gacha games."
+            content="The Honkai: Star Rail Library"
         />
-        <meta property="og:title" content="Honkai: Star Rail - Irminsul.GG" />
+        <meta property="og:title" content="Honkai: Star Rail Library" />
         <meta property="og:type" content="website" />
         <meta
             property="og:image"
-            content="https://assets.irminsul.gg/main/icons/HSR.png"
+            content="public/logo.png"
         />
         <meta
             property="og:description"
-            content="The Honkai: Star Rail branch of Irminsul.GG - a database and companion website for various gacha games."
+            content="The Honkai: Star Rail Library"
         />
 
         <link
             rel="icon"
-            type="image"
-            href="https://assets.irminsul.gg/main/icons/HSR.png"
+            type="image/png"
+            href="public/logo.png"
         />
         <link
             rel="apple-touch-icon"
-            href="https://assets.irminsul.gg/main/icons/HSR.png"
+            type="image/png"
+            href="public/logo.png"
         />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -40,7 +41,7 @@
             href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap"
         />
 
-        <title>Honkai: Star Rail - Irminsul.GG</title>
+        <title>Honkai: Star Rail - هونكاي العرب</title>
     </head>
 
     <body>
