--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <meta property="og:type" content="website" />
         <meta
             property="og:image"
-            content="public/logo.png"
+            content="logo.png"
         />
         <meta
             property="og:description"
@@ -22,12 +22,12 @@
         <link
             rel="icon"
             type="image/png"
-            href="public/logo.png"
+            href="logo.png"
         />
         <link
             rel="apple-touch-icon"
             type="image/png"
-            href="public/logo.png"
+            href="logo.png"
         />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
